[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["penkhasoveg <pen.egor2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
drf-spectacular = {extras = ["sidecar"], version = "^0.26.2"}
django-environ = "^0.10.0"
djangorestframework-camel-case = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
